string chp2 covered

--- a/Modern Python/string/index.ipynb
+++ b/Modern Python/string/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -78,14 +78,114 @@
      "output_type": "stream",
      "text": [
       " name:Muhammad Talha\n",
-      "fathername: Abdul Rehman\n"
+      "fathername: Abdul Rehman\n",
+      "\n",
+      "my name is Muhammad Talha\n",
+      "my father name is  Abdul Rehman\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# fstring\n",
+    "# fstring methods\n",
+    "#method1\n",
     "print(f\"\"\" name:{name}\n",
-    "fathername:{father_name}\"\"\")"
+    "fathername:{father_name}\"\"\")\n",
+    "# method2\n",
+    "print(\"\"\"\n",
+    "my name is {a}\n",
+    "my father name is {b}\n",
+    "\"\"\".format(a=name,b=father_name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "my name is Muhammad Talha\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"my name is {a}\".format(a=name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'      Muhammad Talha     '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'      muhammad talha     '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'      Muhammad Talha     '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'      MUHAMMAD TALHA     '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'      muhammad talha     '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Muhammad Talha'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "name2:str=\"      Muhammad Talha     \"\n",
+    "display(name2)\n",
+    "# display(name2.lstrip())\n",
+    "# display(name2.rstrip())\n",
+    "display(name2.capitalize())\n",
+    "# capitalize the letter of every words\n",
+    "display(name2.title())  \n",
+    "display(name2.upper())\n",
+    "display(name2.lower())\n",
+    "display(name2.strip())"
    ]
   },
   {
@@ -94,20 +194,72 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'        Muhammad             Ali            '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Muhammad Ali '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Muhammad Ali'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "name3:str=\"        Muhammad             Ali            \"\n",
+    "display(name3)\n",
+    "strdata:str=re.sub(\" {2,100}\",\" \",name3)\n",
+    "display(strdata)\n",
+    "display(strdata.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'localhost:3000'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "url:str=\"http://localhost:3000\"\n",
+    "display(url.removeprefix(\"http://\"))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   }
  ],
